--- a/index.html
+++ b/index.html
@@ -7,29 +7,45 @@
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"/>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@glidejs/glide/dist/css/glide.core.min.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
 </head>
 <body>
-    <header>
-        <img src="images/logo.png" alt="logo">
         <nav>
-            <ul class="nav-links">
+            <ul class="sidebar">
+                <li onclick="hideSibar()"><svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#e8eaed"><path d="m256-200-56-56 224-224-224-224 56-56 224 224 224-224 56 56-224 224 224 224-56 56-224-224-224 224Z"/></svg><a href="#"></a></li>
+                <li><a href="#"><img src="images/logo.png" alt="logo"></a></li>
                 <li><a href="#">Home</a></li>
                 <li>
-                    <!-- <a href="#">Products</a>
+                    <a href="#">Products</a>
                     <ul class="dropdown1">
                         <li><a href="#">Invest</a></li>
                         <li><a href="#"></a>Own-a-Farm</li>
                         <li><a href="MarketPlace"></a></li>
-                    </ul> -->
+                    </ul>
                 </li>
                 <li><a href="#">About</a></li>
                 <li><a href="#">Blog</a></li>
                 <li><a href="#">Contact</a></li>
                 <li><a href="#"><i class="fa-regular fa-circle-user"></i></a></li>
             </ul>
+            <ul class="nav-links">
+                <li><a href="#"><img src="images/logo.png" alt="logo"></a></li>
+                <li class="hideOnMobile"><a href="#">Home</a></li>
+                <li class="hideOnMobile">
+                    <a href="#">Products</a>
+                    <!-- <ul class="dropdown1">
+                        <li><a href="#">Invest</a></li>
+                        <li><a href="#"></a>Own-a-Farm</li>
+                        <li><a href="MarketPlace"></a></li>
+                    </ul> -->
+                </li>
+                <li class="hideOnMobile"><a href="#">About</a></li>
+                <li class="hideOnMobile"><a href="#">Blog</a></li>
+                <li class="hideOnMobile"><a href="#">Contact</a></li>
+                <li class="hideOnMobile"><a href="#"><i class="fa-regular fa-circle-user"></i></a></li>
+                <li class="menuButton" onclick="showSidebar()"><a href="#"><svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#e8eaed"><path d="M120-240v-80h720v80H120Zm0-200v-80h720v80H120Zm0-200v-80h720v80H120Z"/></svg></a></li>
+            </ul>
         </nav>
-    </header>
-
     <div class="glide">
         <div class="glide__track" data-glide-el="track">
             <ul class="glide__slides">
